fixed illustrator overflow issue

--- a/css/newlayout.css
+++ b/css/newlayout.css
@@ -46,7 +46,7 @@ header {
 
 .content {
     grid-area: content;
-    overflow-x: hidden;
+    overflow-x: wrap;
     overflow-y: visible;
 }
 
